--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_477u68wvzm/croot/certifi_1671487773341/work/certifi
+certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 Flask==2.2.2
 Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
@@ -11,6 +13,8 @@ jsonpickle==3.0.1
 MarkupSafe==2.1.2
 python-digitalocean==1.17.0
 requests==2.28.2
+SQLAlchemy==2.0.1
+typing_extensions==4.4.0
 urllib3==1.26.14
 Werkzeug==2.2.2
 zipp==3.12.0
