--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
