--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,13 @@ jobs:
       run: 
         curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh && sh install-scout.sh
 
-        echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
-        
-        docker scout quickview
-        docker scout cves
+    - name: Login to Docker Registry
+      run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
 
+    - name: Run Docker Scout commands
+      run: |
+        docker scout quickview docker
+        docker scout cves
 
 
         
