--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,15 @@ jobs:
     - name: Build Docker Image
       run: docker build -f Dockerfile -t myapp:latest .
 
+    - name: Set up Docker configuration
+      run: |
+        echo -n "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"${DOCKER_AUTH}\"}}}" > $HOME/.docker/config.json
+      env:
+        DOCKER_AUTH: ${{ secrets.DOCKER_TOKEN }}
+
     - name: Run Docker Scan
       run: 
         curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh && sh install-scout.sh
-
-    - name: Login to Docker Registry
-      run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
 
     - name: Run Docker Scout commands
       run: |
