--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,20 +46,17 @@ jobs:
     - name: Build Docker Image
       run: docker build -f Dockerfile -t myapp:latest .
 
-    - name: Docker Login
-      run: |
-        echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u ${{ secrets.REPO_USER }} --password-stdin
-        mkdir -p $HOME/.docker
-        cp ~/.docker/config.json $HOME/.docker/config.json
+    - name: Set up Docker authentication token
+      run: echo "::set-env name=DOCKER_AUTH_TOKEN::${{ secrets.DOCKER_TOKEN }}"
 
-    - name: Run Docker Scan
-      run: 
+    - name: Install Docker Scout CLI
+      run: |
         curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh && sh install-scout.sh
 
     - name: Run Docker Scout commands
       run: |
-        docker scout quickview docker
-        docker scout cves
+        DOCKER_AUTH_TOKEN=${{ env.DOCKER_AUTH_TOKEN }} docker scout quickview docker
+        DOCKER_AUTH_TOKEN=${{ env.DOCKER_AUTH_TOKEN }} docker scout cves
 
 
         
