--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,17 +46,12 @@ jobs:
     - name: Build Docker Image
       run: docker build -f Dockerfile -t myapp:latest .
 
-    - name: Set up Docker authentication token
-      run: echo "::set-env name=DOCKER_AUTH_TOKEN::${{ secrets.DOCKER_TOKEN }}"
-
-    - name: Install Docker Scout CLI
-      run: |
-        curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh && sh install-scout.sh
-
-    - name: Run Docker Scout commands
-      run: |
-        DOCKER_AUTH_TOKEN=${{ env.DOCKER_AUTH_TOKEN }} docker scout quickview docker
-        DOCKER_AUTH_TOKEN=${{ env.DOCKER_AUTH_TOKEN }} docker scout cves
+    - name: Docker Scout Scan
+      run: docker/scout-action@v1.8.0
+      with:
+        dockerhub-user: ${{ secrets.REPO_USER }}
+        dockerhub-password: ${{ secrets.REPO_PWD }}
+        command: quickview,cves
 
 
         
