--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       run: docker build -f Dockerfile -t myapp:latest .
 
     - name: Docker Scout Scan
-      run: docker/scout-action@v1.8.0
+      uses: docker/scout-action@v1.8.0
       with:
         dockerhub-user: ${{ secrets.REPO_USER }}
         dockerhub-password: ${{ secrets.REPO_PWD }}
