--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       uses: docker/scout-action@v1.8.0
       with:
         dockerhub-user: ${{ secrets.REPO_USER }}
-        dockerhub-password: ${{ secrets.REPO_PWD }}
+        dockerhub-password: ${{ secrets.DOCKER_TOKEN }}
         command: quickview,cves
 
 
