--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,15 @@ jobs:
     - name: Build Docker Image
       run: docker build -f Dockerfile -t myapp:latest .
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.REPO_USER  }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
     - name: Docker Scout Scan
       uses: docker/scout-action@v1.8.0
       with:
-        dockerhub-user: ${{ secrets.REPO_USER }}
-        dockerhub-password: ${{ secrets.DOCKER_TOKEN }}
         command: quickview,cves
 
 
