--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.REPO_USER  }}
+        username: ${{ secrets.REPO_USR  }}
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Docker Scout Scan
