--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,15 @@ jobs:
       uses: docker/scout-action@v1.8.0
       with:
         command: quickview,cves
+        only-severities: critical,high
+        sarif-file: scout-report.sarif
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      if: always()
+      with: 
+        name: docker-scout-findings
+        path: scout-report.sarif
 
 
         
